Re-work fixtures to be runnable from node and hermes

--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
     "ubrn": "./bin/cli.cjs",
     "uniffi-bindgen-react-native": "./bin/cli.cjs"
   },
+  "scripts": {
+    "test": "./scripts/run-tests.sh"
+  },
   "devDependencies": {
     "abortcontroller-polyfill": "^1.7.5",
     "metro": "^0.80.8",
